<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/check_updates_button"
            style="@style/Theme.Common.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_button_check_updates" />

        <Button
            android:id="@+id/report_issue_button"
            style="@style/Theme.Common.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_button_open_issue" />

        <Button
            android:id="@+id/licenses_button"
            style="@style/Theme.Common.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_button_libraries" />

        <Button
            android:id="@+id/logs_button"
            style="@style/Theme.Common.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_button_logs" />

    </LinearLayout>

</ScrollView>
