<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:minHeight="?android:attr/listPreferredItemHeight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/library_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/small"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="?attr/primaryOnSurface"
                android:textSize="@dimen/about_library_item_title_text_size"
                android:textStyle="bold"
                tools:text="My Great Library" />

            <ImageView
                android:id="@+id/launch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_about_launch"
                app:tint="?attr/primaryOnSurface"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/library_item_authors"
                android:textSize="@dimen/about_library_item_field_name_text_size" />

            <TextView
                android:id="@+id/library_authors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_weight="2"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/about_library_item_field_value_text_size"
                tools:text="Tom, Dick &amp; Harry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/library_item_artifact"
                android:textSize="@dimen/about_library_item_field_name_text_size" />

            <TextView
                android:id="@+id/library_artifact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_weight="2"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/about_library_item_field_value_text_size"
                tools:text="androidx.activity:activity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/library_item_version"
                android:textSize="@dimen/about_library_item_field_name_text_size" />

            <TextView
                android:id="@+id/library_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_weight="2"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/about_library_item_field_value_text_size"
                tools:text="1.2.3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/library_item_license"
                android:textSize="@dimen/about_library_item_field_name_text_size" />

            <TextView
                android:id="@+id/library_license"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_weight="2"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/about_library_item_field_value_text_size"
                tools:text="Apache 2.0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/library_item_description"
                android:textSize="@dimen/about_library_item_field_name_text_size" />

            <TextView
                android:id="@+id/library_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_weight="2"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/about_library_item_field_value_text_size"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in aliquet justo. Donec tincidunt, leo imperdiet pretium posuere, sapien leo auctor mi, ac scelerisque diam leo vel sapien. Morbi lobortis, sem sed molestie fermentum." />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
